--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/fc-fullstack-courses/sql-training#readme",
   "dependencies": {
     "axios": "^1.2.2",
+    "lodash": "^4.17.21",
     "pg": "^8.8.0"
   }
 }
